--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@clerk/themes": "^1.7.11",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -26,6 +27,7 @@
     "mongoose": "^8.2.3",
     "next": "14.1.4",
     "next-cloudinary": "^6.3.0",
+    "next-themes": "^0.3.0",
     "qs": "^6.12.0",
     "react": "^18",
     "react-dom": "^18",
